# IGVC_YOLO_Nav2_Prototype

./: .gitignore  LICENSE  README.md
config/: nav2_keepout_example.yaml
docs/: datasets_and_training.md  index.html  nav2_segformer_integration.md  rebuild_contract.md  segformer_experiment.md  semantic_roadlines_pipeline.md  startup_quickstart.md  technical_architecture.md  testing_dashboard.html  vehicle_geometry_and_bringup.md  zed_validation_workflow.md
docs/traffic_cones/: README.md
models/: README.md
proof/igvc_bev/: igvc_bev_summary.json
ros2_ws/src/seg_ros_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/seg_ros_bridge/launch/: competition_objects.launch.py  igvc_bev.launch.py  igvc_bev_demo.launch.py  live_perception.launch.py  seg_demo.launch.py  segformer.launch.py  segformer_demo.launch.py  zed_image_recorder.launch.py
ros2_ws/src/seg_ros_bridge/resource/: seg_ros_bridge
ros2_ws/src/seg_ros_bridge/rviz/: igvc_bev.rviz  segformer.rviz
ros2_ws/src/seg_ros_bridge/seg_ros_bridge/: competition_objects_node.py  igvc_bev_node.py  image_replay_node.py  live_perception_node.py  seg_demo_node.py  segformer_node.py  zed_image_recorder_node.py
scripts/: benchmark_live_perception.py  evaluate_traffic_cones.py  export_roadline_proof.py  extract_validation_frames.py  generate_combined_semantic_cone_proof.py  generate_igvc_bev_proof.py  generate_nav2_segformer_proof.py  generate_pipeline_diagram.py  generate_segformer_dashcam_proof.py  run_yolo_live_dashboard.py  segformer_webui.py  start_live_video_stack.sh
(+5 files in other folders)
